# html-to-pdf

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  operations.db  test.html
.github/workflows/: ci.yml  docker-build.yml
.sqlx/: query-05502925b70c3b3cfc88d96e2f6acf71d2644e1017460402ceafa6123608d00b.json  query-075508fd8f38281bb39854df20d9e2e40bfdea668d61ba15766ab95169e2d131.json  query-0f54c5c8cd50af4387165800571f193d2a1b080d65221320c3e075fe4fd51727.json  query-16e41fd0795a7aa3c868ccd9b488fd309ea6c11cafffaa4cf6c69fbc5d925e93.json  query-19863e04f814b5bca5b99df88332a0ee163aa14382b4348f43fab4c28791fd99.json  query-3d95bbcd573a1c9836dfd541b7ea193950b6859f34f5bd40e915e693aceb9bdf.json  query-65b0d87e320275d35bd3b14e15bab48f61cf2a4acf4f7b29100e0a8aac0fd370.json  query-9c3d36a1f541439eb2194a99b4d4e0b6eca0e1a9ee882aa20e52e817548f3342.json  query-a4654d68934714e89c184aaf3226d90352bc07b016c639218adc95e6e11f95f7.json  query-ceb957eab72b7c251bcb5e0c8087bf4a5d31585591cb680c15864083b0fb3a28.json
data/: operations.db  operations.db-shm  operations.db-wal
migrations/: 0001_create_operations.sql  0002_create_emails_table.sql  0003_create_operation_channels.sql
src/: app.rs  logger.rs  main.rs  temp.html
src/config/: mod.rs  pdf_config.rs
src/handlers/: email_handler.rs  mod.rs  notification_handler.rs  operation_handler.rs  pdf_handler.rs
src/models/: email_model.rs  mod.rs  notification_model.rs  operation_channel_model.rs  operation_model.rs  pdf_model.rs
src/services/: email_service.rs  mod.rs  notification_channel_service.rs  notification_service.rs  operation_service.rs  pdf_service.rs
src/tests/: mod.rs  pdf_tests.rs
