[package]
name = "pdf_service"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-web = "4"
actix-rt = "2"
anyhow = "1.0"
chromiumoxide = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bytes = "1.5"
tokio = { version = "1.28", features = ["full"] }
futures-util = "0.3"

log = "0.4"
env_logger = "0.9"
urlencoding = "2.1.3"
tempfile = "3.15.0"
defer = "0.2.1"
uuid = { version = "1.11.0", features = ["v4"] }

# Para tests
# (Aunque no siempre son necesarios en el Cargo si no haces macros, etc.)
