[package]
name = "pdf_service"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-web = "4"
actix-rt = "2"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bytes = "1.5"
tokio = { version = "1.28", features = ["full"] }
futures-util = "0.3"

log = "0.4"
env_logger = "0.9"
urlencoding = "2.1.3"
tempfile = "3.15.0"
defer = "0.2.1"
uuid = { version = "1.11.0", features = ["v4"] }

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
chrono = { version = "*", features = ["serde"] }
dotenv = "0.15"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport"] }
openssl = "0.10"
base64 = "0.20"
which = "7.0.1"
actix-files = "0.6.6"
reqwest = { version = "0.12.12", features = ["json"] }

# Para tests
# (Aunque no siempre son necesarios en el Cargo si no haces macros, etc.)
